# loid

./: .deepsource.toml  .editorconfig  .gitignore  Cargo.toml  README.md  clippy.toml  justfile  package.json  pnpm-lock.yaml  postcss.config.mjs  rust-toolchain.toml  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: test.yml
bindings/javascript/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
bindings/javascript/__test__/: index.spec.mjs
bindings/javascript/npm/darwin-x64/: README.md  package.json
bindings/javascript/npm/linux-x64-gnu/: README.md  package.json
bindings/javascript/npm/win32-x64-msvc/: README.md  package.json
bindings/javascript/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/loid/: __init__.py  _loid.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_events.py
bins/agent/: Cargo.toml
bins/agent/src/: main.rs
bins/cli/: Cargo.toml
bins/cli/src/cli/: command.rs  context.rs  mod.rs  result.rs
bins/cli/src/cli/add/: mod.rs
bins/cli/src/cli/info/: mod.rs
bins/conductor/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cli/: mod.rs
crates/cli/src/cli/add/: mod.rs
crates/cli/src/cli/info/: mod.rs
crates/conductor/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  models.rs  prelude.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs
crates/neurons/: Cargo.toml
crates/neurons/src/: lib.rs  models.rs  prelude.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/resources/: Cargo.toml
crates/resources/src/: prelude.rs
crates/resources/src/database/: base.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
crates/resources/tests/: postgres_integrations_tests.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/proto/: calculator.proto
crates/transport/src/: lib.rs
docs/: astro.config.mjs  mkdocs.yml  pyproject.toml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  style.css
docs/src/: .pages  index.md
docs/src/blog/: welcome.md
docs/src/concepts/: .pages  agents.md  architecture.md  conductor.md  resources.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: example.md
docs/src/examples/: neurons.md  sensors.md
docs/src/examples/bindings/python/: basic_neuron.py
docs/src/examples/sensors/: file.md  kafka.md  mqtt.md  sql.md
docs/src/examples/types/neurons/: neurons.md
docs/src/examples/types/resources/: mysql.md  postgres.md
docs/src/examples/types/sensors/: generate.md  http_client.md  http_server.md
docs/src/guide/: .pages  idea.md
docs/src/internals/: architecture.md
