[workspace]
members = [
    "crates/engine",
    "crates/cli",
    "crates/transport",
    "crates/agent",
    "crates/sensors", "crates/neurons", "crates/resources", "crates/conductor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daniel Seifert <loid@dfseifert.dev>"]
repository = ""

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.5"
tracing = "0.1.40"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["default", "derive"] }
console = "0.15.11"

loid-transport = { path = "crates/transport" }
loid-engine = { path = "crates/engine" }
