[workspace]
members = [
    # bins
    "bins/cli",
    "bins/agent",
    "bins/conductor",
    # crates
    "crates/engine",
    "crates/transport",
    "crates/sensors",
    "crates/neurons",
    "crates/resources",
    "crates/events",
    # bindings
    "bindings/python",
    "bindings/javascript",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Daniel Seifert <loid@dfseifert.dev>"]
repository = ""
rust-version = "1.87.0"

[workspace.dependencies]
# Crates
loid-engine = { path = "crates/engine" }
loid-transport = { path = "crates/transport" }
loid-sensors = { path = "crates/sensors" }
loid-neurons = { path = "crates/neurons" }
loid-resources = { path = "crates/resources" }

# Dependencies
loid-events = { path = "crates/events" }
tokio = { version = "1.45.0", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.14.1"
tracing = "0.1.40"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["default", "derive"] }
console = "0.15.11"
uuid = { version = "1.17.0", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Dev dependencies
testcontainers = { version = "0.24.0", features = ["default"] }
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
