[project]
name = "loid"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-awesome-pages-plugin==2.9.3",
    "mkdocs-git-authors-plugin>=0.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-html-plugin>=0.2.3",

]
version = "0.1.0"
