[package]
name = "loid-labs_loid"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
loid-events.workspace = true

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
