[package]
name = "py-loid"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_loid"
crate-type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["chrono", "chrono-local", "chrono-tz"] }
loid-events.workspace = true