[package]
name = "loid-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
loid-networking.workspace = true
loid-persistence.workspace = true
loid-engine.workspace = true
tonic.workspace = true
tracing.workspace = true
