[package]
name = "loid-networking"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
anyhow.workspace = true
uuid.workspace = true
loid-persistence.workspace = true
loid-engine.workspace = true

[build-dependencies]
tonic-build.workspace = true
