[package]
name = "loid-resources"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx.workspace = true
reqwest.workspace = true

[dev-dependencies]
# testing
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true